# silentpulse-databricks

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  release.yml
examples/dashboards/: ai-enriched-alerts.sql
examples/genie-space/: create-genie-space.py
examples/metric-views/: deploy-metric-views.sql  feed-health.yaml  security-visibility.yaml
examples/notebooks/: ai-enrichment-pipeline.py  ai-functions.py  quickstart.py
silentpulse-datasource/: pyproject.toml
silentpulse-datasource/silentpulse_datasource/: __init__.py  datasource.py
silentpulse-datasource/tests/: conftest.py  test_datasource.py
silentpulse-sdp/: pyproject.toml
silentpulse-sdp/silentpulse_sdp/: __init__.py  client.py  config.py  observe.py  streaming.py
silentpulse-sdp/tests/: test_client.py  test_config.py  test_observe.py  test_streaming.py
silentpulse-uc-discovery/: pyproject.toml
silentpulse-uc-discovery/silentpulse_uc_discovery/: __init__.py  discovery.py
