[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silentpulse-datasource"
version = "0.1.4"
description = "PySpark DataSource for reading SilentPulse visibility data into Databricks"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
spark = ["pyspark>=3.5.0"]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["silentpulse_datasource*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
