[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silentpulse-uc-discovery"
version = "0.1.1"
description = "Auto-discover Databricks Unity Catalog assets for SilentPulse monitoring"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "databricks-sdk>=0.20.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["silentpulse_uc_discovery*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
